--- a/Complete Responsive Website - Code/ingredients.css
+++ b/Complete Responsive Website - Code/ingredients.css
@@ -19,7 +19,7 @@ h1{
     text-align: center;
 }
 
-section{
+.ingredients-list{
     background-color: #FAA500;
     width: 20.375rem;
     height: 26.438rem;
@@ -34,4 +34,60 @@ li{
     font-family: "Inter";
     color: #FFFFFF;
     width: 15rem;
+}
+
+.donut-pic{
+    display: none;
+}
+
+@media (min-width: 800px){
+    body{
+        background-color: #BDA2D5;
+    }
+    
+    header{
+        background-color: #FA0000;
+        width: 70rem;
+        height: 9.875rem;
+        border-radius: 2.188rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 1.5rem auto;  
+    }
+    
+    h1{
+        color: #FF9900;
+        font-family: "Inter";
+        text-align: center;
+        font-size: 5rem;
+        width: 100rem;
+    }
+    
+    .ingredients-list{
+        background-color: #FAA500;
+        width: 70rem;
+        height: 35rem;
+        border-radius: 2.188rem;
+        display: flex;
+        justify-content: center;
+        margin: 10rem auto;
+    }
+    
+    li{
+        font-size: 2.4rem;
+        font-family: "Inter";
+        color: #FFFFFF;
+        width: 60rem;
+        list-style-position: inside;
+    }
+
+    .donut-pic{
+        display: block;
+        width: 70rem;
+        height: 50rem;
+        margin: -30rem 82.5rem;
+        position: relative;
+        z-index: -1;
+    }
 }
