--- a/Complete Responsive Website - Code/mainpage.css
+++ b/Complete Responsive Website - Code/mainpage.css
@@ -17,6 +17,7 @@ h1{
     color: #FF9900;
     font-family: "Inter";
     text-align: center;
+    width: 14.5rem;
 }
 
 section{
@@ -30,14 +31,14 @@ img{
     height: 20rem;
 }
 
-@media only screen and(min-width: 800px){
+@media (min-width: 800px){
     body{
         background-color: #BDA2D5;
     }
     
     header{
         background-color: #FA0000;
-        width: 52.188rem;
+        width: 70rem;
         height: 9.875rem;
         border-radius: 2.188rem;
         display: flex;
@@ -50,6 +51,8 @@ img{
         color: #FF9900;
         font-family: "Inter";
         text-align: center;
+        font-size: 5rem;
+        width: 100rem;
     }
     
     section{
@@ -59,7 +62,7 @@ img{
     }
     
     img{
-        width: 94.438rem;
-        height: 53.125srem;
+        width: 70rem;
+        height: 50rem;
     }
 }
